# handcalcs_nbconvert_exporter

./: .bumpversion.cfg  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
docs/: conf.py
handcalcs_nbconvert_exporter/tests/: test_all.py
