[build-system]
requires = ["flit_core >=2,<4", "setuptools", "wheel", "jupyter-packaging"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "handcalcs_nbconvert_exporter"
author = "Tim K. Paine, Connor Ferster"
author-email = "connorferster@gmail.com"
home-page = "http://github.com/connorferster/handcalcs_nbconvert_nocode"
classifiers = [ "License :: OSI Approved :: Apache Software License",]
description-file = "README.md"

